app-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: cb
    version: v1
  name: cb
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cb
      version: v1
  template:
    metadata:
      labels:
        app: cb
        version: v1
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - name: cb
        image: docker.io/devopstestaccount/circuit-breaker:1.0
        command: ["uv", "run", "app", "--rate-limit-period=5", "--max-requests=4"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
---
apiVersion: v1
kind: Service
metadata:
  name: cb
  labels:
    app: cb
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: cb
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: cb-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cb-vs
spec:
  hosts:
  - "*"
  gateways:
  - cb-gateway
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: cb
        port:
          number: 8080
