destinationrule-conn-pool.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cb
spec:
  host: cb
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    outlierDetection:
      consecutive5xxErrors: 1
      interval: 1s
      baseEjectionTime: 10s
      maxEjectionPercent: 100
